--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     </style>
 </head>
 <body>
-    <a href="Public/portfolio.html">portfolio</a>
+    <a href="Public/portfolio.html">portfolio</a> <br>
+    <a href="Public/single_data.html">single data</a> <br>
 </body>
 </html>
