--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 <body>
     <a href="Public/portfolio.html">portfolio</a> <br>
     <a href="Public/single_data.html">single data</a> <br>
+    <a href="Public/blender_daging.html">blender daging</a><br>
 </body>
 </html>
