--- a/Public/blender_daging.html
+++ b/Public/blender_daging.html
@@ -213,11 +213,11 @@
         }
 
         .why-choose ul li:hover {
-            color: #25D366;
+            color: white;
         }
 
         .cta {
-            position: fixed;
+            position: sticky;
             bottom: 20px;
             left: 0;
             right: 0;
@@ -671,7 +671,7 @@
                     alt="Dewi">
                 <div class="testimonial-content">
                     <p><strong>Dewi</strong></p>
-                    <p class="stars">⭐⭐⭐⭐⭐</p>
+                    <p c\lass="stars">⭐⭐⭐⭐⭐</p>
                     <p>"Desainnya elegan dan kuat, sangat direkomendasikan!"</p>
                     <img class="review-img" src="https://via.placeholder.com/100" alt="Review Dewi">
                 </div>
