Menambahkan Gambar Review

--- a/Public/blender_daging.html
+++ b/Public/blender_daging.html
@@ -633,7 +633,7 @@
                     <p><strong>Rina S.</strong></p>
                     <p class="stars">⭐⭐⭐⭐⭐</p>
                     <p>"Blender ini sangat membantu! Daging jadi halus dalam hitungan detik. Wajib punya!"</p>
-                    <img class="review-img" src="https://via.placeholder.com/100" alt="Review Rina S">
+                    <img class="review-img" src="https://i.pinimg.com/474x/e6/6a/7c/e66a7c007c87862206be7d2614ffae67.jpg" alt="Review Rina S">
                 </div>
             </div>
             <div class="testimonial">
@@ -643,7 +643,7 @@
                     <p><strong>Vina</strong></p>
                     <p class="stars">⭐⭐⭐⭐⭐</p>
                     <p>"Kualitas premium dengan harga yang sangat terjangkau. Pengiriman juga cepat!"</p>
-                    <img class="review-img" src="https://via.placeholder.com/100" alt="Review Vina">
+                    <img class="review-img" src="https://i.pinimg.com/474x/ac/10/87/ac1087f66c9918cd368f9ebfd4864376.jpg" alt="Review Vina">
                 </div>
             </div>
             <div class="testimonial">
@@ -653,7 +653,7 @@
                     <p><strong>Lina M.</strong></p>
                     <p class="stars">⭐⭐⭐⭐</p>
                     <p>"Blendernya bagus, tapi pengiriman agak lama. Overall puas!"</p>
-                    <img class="review-img" src="https://via.placeholder.com/100" alt="Review Lina M">
+                    <img class="review-img" src="https://i.pinimg.com/474x/98/36/af/9836afc75fd68edf3febc415125f7c0c.jpg" alt="Review Lina M">
                 </div>
             </div>
             <div class="testimonial">
@@ -663,7 +663,7 @@
                     <p><strong>Amira</strong></p>
                     <p class="stars">⭐⭐⭐⭐⭐</p>
                     <p>"Sangat mudah digunakan dan hasilnya memuaskan. Cocok untuk usaha kuliner!"</p>
-                    <img class="review-img" src="https://via.placeholder.com/100" alt="Review Amira">
+                    <img class="review-img" src="https://i.pinimg.com/474x/81/68/c4/8168c48a9b238fdc8be528ec0a49fb32.jpg" alt="Review Amira">
                 </div>
             </div>
             <div class="testimonial">
@@ -673,7 +673,7 @@
                     <p><strong>Dewi</strong></p>
                     <p c\lass="stars">⭐⭐⭐⭐⭐</p>
                     <p>"Desainnya elegan dan kuat, sangat direkomendasikan!"</p>
-                    <img class="review-img" src="https://via.placeholder.com/100" alt="Review Dewi">
+                    <img class="review-img" src="https://i.pinimg.com/474x/81/68/c4/8168c48a9b238fdc8be528ec0a49fb32.jpg" alt="Review Dewi">
                 </div>
             </div>
         </div>
@@ -704,8 +704,8 @@
         nextButton.addEventListener('click', () => showSlide(1));
 
         function countdownTimer() {
-            const endDate = new Date('March 1, 2025 23:59:59');
-            const startDate = new Date('January 1, 2025 00:00:00');
+            const endDate = new Date('February 10, 2025 23:59:59');
+            const startDate = new Date('February 2, 2025 00:00:00');
             const totalDuration = endDate - startDate;
 
             function updateTimer() {
